# mote

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  HOMEBREW_SETUP.md  README.md  TESTING.md  TEST_CASES.md  TEST_REPORT.md  release-please-config.json  test.diff
.github/workflows/: release.yml
docs/: E2E_TEST_REPORT.md
docs/development/: HANDOFF.md  RELEASE.md
docs/testing/: TEST_REPORT.md
examples/: README.md
homebrew-formula/: mote.rb
scripts/: shell_integration.fish  shell_integration.sh
src/: cli.rs  config.rs  config.rs.backup  error.rs  ignore.rs  main.rs  main_new_commands.rs  path_resolver.rs
src/commands/: context.rs  ignore.rs  init.rs  migrate.rs  mod.rs  snapshot.rs
src/commands/snapshot/: collect.rs  delete.rs  diff.rs  gc.rs  mod.rs  restore.rs
src/config/: context.rs  mod.rs  project.rs  resolver.rs  tests.rs
src/storage/: gc.rs  index.rs  location.rs  mod.rs  objects.rs  snapshots.rs
tests/: integration_test.rs
