[package]
name = "mote"
version = "0.2.2"
edition = "2021"
description = "A fine-grained snapshot management tool for projects"
license = "MIT"
repository = "https://github.com/shabaraba/mote"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
zstd = "0.13"
walkdir = "2.4"
ignore = "0.4"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
dirs = "5.0"
hex = "0.4"
similar = { version = "2.3", features = ["inline"] }
shell-words = "1.1"

[dev-dependencies]
tempfile = "3.8"
